--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <script type="text/javascript">
-    var slackAPIKey        = 'xoxp-2442078175-3326376290-3725937040-91e5d7',
-        googleAPIKey       = 'AIzaSyCSYzqlibFyFE93jd_amSQTWDzZ54g0Su4',
+    var slackApiKey        = 'xoxp-2442078175-3326376290-3725937040-91e5d7',
+        googleApiKey       = 'AIzaSyCSYzqlibFyFE93jd_amSQTWDzZ54g0Su4',
         googleClientId     = '549978578689-gth04j75b4e3g9tme2a983hni8l50775'
                            + '.apps.googleusercontent.com',
         googleScopes       = 'https://spreadsheets.google.com/feeds '
                            + 'https://docs.google.com/feeds',
         officeHoursSheetId = '1dbQ5XLk8k83b1Za3Ugmp4PW-9QKaW9j46Pmd0fLT96Y';
+
+    gapi.client.setApiKey(googleApiKey);
+
     function authorize(usePopUp) {
       var request = {
         client_id: googleClientId,
