swap client id and api key

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <button id="authorize-button" style="visibility: hidden">Authorize</button>
   <script type="text/javascript">
 
-    var clientId = '837050751313';
+    var clientId = '549978578689-gth04j75b4e3g9tme2a983hni8l50775.apps.googleusercontent.com';
 
-    var apiKey = 'AIzaSyAdjHPT5Pb7Nu56WJ_nlrMGOAgUAtKjiPM';
+    var apiKey = 'AIzaSyCSYzqlibFyFE93jd_amSQTWDzZ54g0Su4';
 
     var scopes = 'https://www.googleapis.com/auth/plus.me';
 
