truncate client_id

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <button id="authorize-button" style="visibility: hidden">Authorize</button>
   <script type="text/javascript">
 
-    var clientId = '549978578689-gth04j75b4e3g9tme2a983hni8l50775.apps.googleusercontent.com';
+    var clientId = '549978578689';
 
     var apiKey = 'AIzaSyCSYzqlibFyFE93jd_amSQTWDzZ54g0Su4';
 
