--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     function handleAuthResult(authResult) {
       var authorizeButton = document.getElementById('authorize-button');
       if (authResult && !authResult.error) {
-        authorizeButton.style.visibility = 'hidden';
-        makeApiCall();
+        console.log("we're in!")
       } else {
         handleAuthClick();
       }
@@ -38,29 +37,6 @@
       // Step 3: get authorization to use private data
       gapi.auth.authorize({client_id: clientId, scope: scopes, immediate: false}, handleAuthResult);
       return false;
-    }
-
-    // Load the API and make an API call.  Display the results on the screen.
-    function makeApiCall() {
-      // Step 4: Load the Google+ API
-      gapi.client.load('plus', 'v1').then(function() {
-        // Step 5: Assemble the API request
-        var request = gapi.client.plus.people.get({
-          'userId': 'me'
-        });
-        // Step 6: Execute the API request
-        request.then(function(resp) {
-          var heading = document.createElement('h4');
-          var image = document.createElement('img');
-          image.src = resp.result.image.url;
-          heading.appendChild(image);
-          heading.appendChild(document.createTextNode(resp.result.displayName));
-
-          document.getElementById('content').appendChild(heading);
-        }, function(reason) {
-          console.log('Error: ' + reason.result.error.message);
-        });
-      });
     }
   </script>
   <!-- Step 1: Load JavaScript client library -->
