A Node was inserted somewhere it doesn't belong

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       } else {
         var clickMe = document.createElement('a');
         clickMe.onclick = handleAuthClick;
-        document.appendChild(clickMe);
+        document.body.appendChild(clickMe);
       }
     }
 
