--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         console.log("we're in!")
       } else {
         var clickMe = document.createElement('a');
-        clickMe.textContent = 'authorize';
         clickMe.onclick = handleAuthClick;
         document.body.appendChild(clickMe);
+        clickMe.click();
       }
     }
 
