--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
 
     var scopes = 'https://www.googleapis.com/auth/plus.me';
 
-    function handleClientLoad() {
-      gapi.client.setApiKey(apiKey);
-      window.setTimeout(checkAuth,1);
-    }
-
     function checkAuth() {
       gapi.auth.authorize({client_id: clientId, scope: scopes, immediate: true}, handleAuthResult);
     }
@@ -40,6 +35,6 @@
     }
   </script>
   <!-- Step 1: Load JavaScript client library -->
-  <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+  <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
 </body>
 </html>
